testsuite/poke.pkl/lt-functions-diag-1.pk
/* { dg-do compile } */

var e = lambda void: {} < lambda void: {}; /* { dg-error "invalid operands" } */
